style-mangabox-main.css
/* ... */
body.sticky-tworows #mainUI {
	grid-template-rows: 114px auto;
}

body.sticky-tworows #stripGridHeaderContainer {
	top: calc(114px + var(--mb-drag-bar-height) + var(--mb-top-spacer));
}

body.sticky-tworows #mainUI:has(.extra-bar:not(.hidden)) {
	grid-template-rows: 156px auto;
}

/*
body.sticky-tworows:not(.sticky-hybrid) #stickyContainer .library-item:not(.no-grow) {
	width: var(--mb-button-size);
}
*/
#extraButtons.filter-small .filter-item:not(:first-child) {
	width: var(--mb-filter-button-size);
}


/*
body.sticky-tworows #filtersBar .filter-item {
	width: var(--mb-filter-button-size);
}
*/
/*
body.sticky-tworows #filtersBar .library-item {
	width: var(--mb-button-size);
}
*/
/*
body.sticky-tworows #stickyContainer .library-item:not(.no-grow).highlighted {
	width: var(--mb-library-large);
}

body.sticky-tworows #stickyContainer .library-item:not(.no-grow).highlighted.with-menu {
	width: var(--mb-library-large-with-menu);
}

body.sticky-tworows:not(.sticky-hybrid) #stickyContainer .library-name {
	opacity: 0;
}

body.sticky-tworows:not(.sticky-hybrid) #stickyContainer .library-item.highlighted .library-name {
	opacity: 1;
}
*/

body.sticky-tworows #bookDetailsContainer {
	transform: translate(-50%, 60px);
	max-height: calc(100vh - 150px - 60px);
}

body.sticky-tworows #seriesMiniHeader {
	top: calc(114px + var(--mb-top-spacer));
}

/*
body.offline #stickyContainer {
	background: linear-gradient(115deg,
			var(--mb-card-color) 0px,
			var(--mb-card-color) calc(100% - 25px - 1px),
			red calc(100% - 25px),
			red calc(100% - 10px),
			var(--mb-card-color) calc(100% - 10px + 1px)
		)
}
*/
.scrollbox {
	position: relative;
	/*width: 100%;*/
	/*height: 300px;*/
	/* or whatever */
	overflow: hidden;
	touch-action: pan-x;
}

.scrollbox-content {
	width: 100%;
	height: 100%;
	overflow: auto;
	/*padding-right: 16px;*/
}

/* Hide native scrollbar */
.scrollbox-content::-webkit-scrollbar {
	display: none;
}

.scrollbox-content {
	-ms-overflow-style: none;
	scrollbar-width: none;
	-webkit-overflow-scrolling: touch;
}

.scrollbox-scrollbar {
	position: absolute;
	background: transparent;
	opacity: 0;
	transition: opacity 0.3s ease;
	pointer-events: none;
}

.scrollbox-scrollbar.visible {
	opacity: 1;
}

.scrollbox-scrollbar:hover {
	opacity: 1;
}


/* Vertical */
.scrollbox[data-scroll-direction="vertical"] .scrollbox-scrollbar {
	top: 0;
	right: 0;
	width: var(--mb-scrollbar-width);
	height: 100%;
	pointer-events: auto;
}

.scrollbox[data-scroll-direction="vertical"] .scrollbox-thumb {
	width: var(--mb-scrollbar-width);
	height: 20px;
	top: 0;
	right: 0;
	margin-right: 2px;
	/*
	margin-top:4px;
	margin-bottom:4px;
	*/
	pointer-events: auto;
}

/* Horizontal */
.scrollbox[data-scroll-direction="horizontal"] .scrollbox-scrollbar {
	left: 0;
	bottom: 0;
	width: 100%;
	height: var(--mb-scrollbar-width);
	pointer-events: auto;
}

.scrollbox[data-scroll-direction="horizontal"] .scrollbox-thumb {
	height: var(--mb-scrollbar-width);
	width: 20px;
	left: 0;
	bottom: 0;
	margin-bottom: 2px;
	/*
	margin-left:4px;
	margin-right:4px;
	*/
	pointer-events: auto;
}


.scrollbox-thumb {
	position: absolute;
	background: var(--mb-accent);
	border-radius: calc(0.5 * var(--mb-scrollbar-width));
	cursor: pointer;
	transition: background-color 0.2s;
	opacity: 0.75;
	pointer-events: auto;
}

.capitalize-first:first-letter {
	text-transform: uppercase;
}

.icon-book{
	position:relative;
}
.icon-book.high:after{
	content:"\e4d6";
	font-family:lucide;
	display:block;
	position:absolute;
	top:0px;
	left:3px;
	width:12px;
	height:12px;
	font-size:12px;
	line-height:12px;
	color: var(--mb-glyph-color);
	/*border-left:1px var(--mb-glyph-color) solid*/
}

.icon-paint-roller:after{
	content:"";
	font-family:lucide;
	display:block;
	position:absolute;
	top:12px;
	left:8px;
	width:19px;
	height:3px;
	border-radius:2px;
	background-color: var(--mb-accent);
	transition:background-color 0.3s;
	/*border-left:1px var(--mb-glyph-color) solid*/
}

.question:after{
	content:'?';
	position:absolute;
	top:50%;
	left:70%;
	width:12px;
	height:18px;
	transform: translate(-50%, -50%);
	font-weight:bold;
	font-size:18px;
	line-height:18px;
	color:var(--mb-glyph-color);
	background-color:var(--mb-login-button-color);
	border:none;
	border-radius: 50%;
	font-weight: bold;
	font-family: 'Outfit';

}

#librariesLeft{
	position:absolute;
	top:var(--mb-top-spacer);
    left:0px;
	width:60px;
	min-width:60px;
	min-height:60px;
	height:60px;
	background: linear-gradient(90deg, var(--mb-card-color) 30%, transparent);
	opacity: 1;
	transition:opacity 0.3s;
    border-left:var(--mb-bar-safe-padding-left) solid var(--mb-card-color);
}

#librariesRight{
	position:absolute;
    top:var(--mb-top-spacer);
	right:0px;
	width:60px;
	min-width:60px;
	min-height:60px;
	height:60px;
	background: linear-gradient(270deg, var(--mb-card-color) 30%, transparent);
	opacity: 1;
	transition:opacity 0.3s;
    border-right:var(--mb-bar-safe-padding-right) solid var(--mb-card-color);

}

#librariesLeft .ico{
	position:absolute;
	left:20%;
	top:50%;
	transform:translate(-50%,-50%);
	font-size: 26px;
}

#librariesRight .ico{
	position:absolute;
	left:80%;
	top:50%;
	transform:translate(-50%,-50%);
	font-size: 26px;
}

#librariesLeft.hidden,
#librariesRight.hidden{
	pointer-events: none;
	opacity: 0;
}

